Acceso a gestión de usuarios arreglado, correo de confirmación tras pedido entregado a domicilio y valoración del pedido